added services for login and signup with server token

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         </activity>
         <activity android:name=".LoginActivity">
         </activity>
+        <activity android:name=".DemoActivity">
+        </activity>
         <activity android:name=".SignupActivity"></activity>
 
         <service android:name=".services.HttpService" android:exported="false">
